# app/endpoint/user/get_user_v1.go
@@ -27,6 +27,8 @@ func (u *UserEndpoint) GetUserV1(ctx context.Context, req *user.GetUserV1Request
 
 	return &user.GetUserV1Response{
 		Id:             userID,
+		FundId:         usr.FundID,
+		OrganizationId: usr.FundID,
 		Email:          usr.Email,
 		Name:           usr.Name,
 		DateOfBirthday: usr.DateOfBirthday,
